# skill-nodeset-server

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yml
nodeset/: build.sh
nodeset/Published/MyCompany/: MyCompany.Classes.cs  MyCompany.Constants.cs  MyCompany.DataTypes.cs  MyCompany.NodeSet.xml  MyCompany.NodeSet2.xml  MyCompany.PredefinedNodes.uanodes  MyCompany.PredefinedNodes.xml  MyCompany.Types.bsd  MyCompany.Types.xsd  MyCompanyModel.xml
nodeset/my-company/: MyCompanyModel.csv
src/: CMakeLists.txt  main.c  main.cpp
src/base/: FiniteStateMachine.hpp  OpcUaServer.h  Program.hpp  ProgramState.hpp  ProgramTransition.hpp  SkillBase.hpp  helper.hpp  synchronized.hpp
src/skills/: GraspSkill.hpp  MoveToAbsPosSkill.hpp  PickSkill.hpp  ReleaseSkill.hpp
